[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://asteroid/EnemyRoot.gd" id="1_he7jo"]
[ext_resource type="Texture2D" uid="uid://bron2mx4ok2lr" path="res://asteroid/res/asteroid1.png" id="2_ahl6p"]
[ext_resource type="Texture2D" uid="uid://ckgxcq2drlq1k" path="res://resources/sqroot.png" id="3_5kn7v"]
[ext_resource type="Script" path="res://game/BehaviorHovering.gd" id="4_le3dx"]

[sub_resource type="CircleShape2D" id="5"]
radius = 22.9713

[node name="EnemyRoot" type="Area2D"]
z_index = -2
scale = Vector2(2, 2)
script = ExtResource("1_he7jo")

[node name="AsteroidSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ahl6p")

[node name="Label" type="Label" parent="."]
offset_left = -8.82353
offset_top = -7.05882
offset_right = 17.1765
offset_bottom = 8.94118
text = "196"

[node name="RootSprite" type="Sprite2D" parent="."]
position = Vector2(-5.23529, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_5kn7v")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource("5")

[node name="BehaviorHovering" type="Node" parent="."]
script = ExtResource("4_le3dx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_player_colission"]
